--- a/index.html
+++ b/index.html
@@ -349,261 +349,230 @@
     <div class="tagline">Tip: Page reload ke baad bhi count safe rahega ✨</div>
   </div>
 
-  <script>
-    // --- DOM elements ---
-    const mantraInput   = document.getElementById("mantraInput");
-    const langSelect    = document.getElementById("langSelect");
-    const supportText   = document.getElementById("supportText");
-    const supportPill   = document.getElementById("supportPill");
-    const countDisplay  = document.getElementById("countDisplay");
-    const mantraPreview = document.getElementById("mantraPreview");
-    const startBtn      = document.getElementById("startBtn");
-    const stopBtn       = document.getElementById("stopBtn");
-    const resetBtn      = document.getElementById("resetBtn");
-    const statusText    = document.getElementById("statusText");
-    const transcriptBox = document.getElementById("transcriptBox");
-    const themeToggle   = document.getElementById("themeToggle");
+<script>
+  // --- DOM elements ---
+  const mantraInput   = document.getElementById("mantraInput");
+  const langSelect    = document.getElementById("langSelect");
+  const supportText   = document.getElementById("supportText");
+  const supportPill   = document.getElementById("supportPill");
+  const countDisplay  = document.getElementById("countDisplay");
+  const mantraPreview = document.getElementById("mantraPreview");
+  const startBtn      = document.getElementById("startBtn");
+  const stopBtn       = document.getElementById("stopBtn");
+  const resetBtn      = document.getElementById("resetBtn");
+  const statusText    = document.getElementById("statusText");
+  const transcriptBox = document.getElementById("transcriptBox");
 
-    const STORAGE_KEY = "naamJapState_v1";
+  // --- SpeechRecognition setup ---
+  const SpeechRecognition = window.SpeechRecognition || window.webkitSpeechRecognition;
+  let recognition = null;
+  let listening = false;
+  let totalCount = 0;
+  let targetWords = [];
+  let userStopped = false;   // 🔸 user ne Stop dabaya hai ya nahi
 
-    const SpeechRecognition = window.SpeechRecognition || window.webkitSpeechRecognition;
-    let recognition = null;
-    let listening = false;
-    let totalCount = 0;
-    let targetWords = [];
-    let isDark = false;
+  function updateTargetWords() {
+    const raw = mantraInput.value || "";
+    targetWords = raw
+      .split(",")
+      .map(w => w.trim().toLowerCase())
+      .filter(Boolean);
+    if (targetWords.length === 0) {
+      targetWords = [];
+      mantraPreview.textContent = "No mantra set – please enter at least one.";
+    } else {
+      mantraPreview.textContent = 'Counting: "' + targetWords.join('", "') + '"';
+    }
+  }
 
-    function saveState() {
-      try {
-        const state = {
-          count: totalCount,
-          mantra: mantraInput.value || "",
-          lang: langSelect.value,
-          dark: isDark
-        };
-        localStorage.setItem(STORAGE_KEY, JSON.stringify(state));
-      } catch (e) {
-        console.warn("State save error:", e);
+  function setListeningState(isOn) {
+    listening = isOn;
+    if (isOn) {
+      startBtn.classList.add("disabled");
+      startBtn.disabled = true;
+      stopBtn.classList.remove("disabled");
+      stopBtn.disabled = false;
+      statusText.textContent = "Sunn raha hoon… jap bolo.";
+    } else {
+      startBtn.classList.remove("disabled");
+      startBtn.disabled = false;
+      stopBtn.classList.add("disabled");
+      stopBtn.disabled = true;
+      if (!statusText.classList.contains("status-error")) {
+        statusText.textContent = "Stopped.";
       }
     }
+  }
 
-    function updateTargetWords() {
-      const raw = mantraInput.value || "";
-      targetWords = raw
-        .split(",")
-        .map(w => w.trim().toLowerCase())
-        .filter(Boolean);
-      if (targetWords.length === 0) {
-        targetWords = [];
-        mantraPreview.textContent = "No mantra set – please enter at least one.";
+  function showTranscript(text) {
+    transcriptBox.innerHTML = "";
+    const span = document.createElement("span");
+    span.textContent = text;
+    transcriptBox.appendChild(span);
+  }
+
+  function resetTranscriptPlaceholder() {
+    transcriptBox.innerHTML = "";
+    const span = document.createElement("span");
+    span.className = "transcript-placeholder";
+    span.textContent = "Yaha last suna hua sentence dikhega…";
+    transcriptBox.appendChild(span);
+  }
+
+  function countOccurrences(text, word) {
+    const tokens = text
+      .toLowerCase()
+      .split(/[\s,.;:!?()"'`]+/)
+      .filter(Boolean);
+    let c = 0;
+    for (const t of tokens) {
+      if (t === word) c++;
+    }
+    return c;
+  }
+
+  function setupRecognition() {
+    if (!SpeechRecognition) {
+      supportText.textContent = "⚠ Browser speech support nahi deta";
+      supportPill.style.background = "#fee2e2";
+      statusText.textContent = "SpeechRecognition support ke liye Chrome / Edge use karo.";
+      startBtn.disabled = true;
+      startBtn.classList.add("disabled");
+      return;
+    }
+
+    recognition = new SpeechRecognition();
+    recognition.continuous = true;
+    recognition.interimResults = false;
+    recognition.lang = langSelect.value;
+
+    recognition.onstart = () => {
+      setListeningState(true);
+    };
+
+    recognition.onend = () => {
+      setListeningState(false);
+
+      // 🔸 Agar user ne Stop nahi dabaya, to auto-restart karo
+      if (!userStopped) {
+        console.log("Auto-restart mic (mobile pe onend aa gaya).");
+        setTimeout(() => {
+          try {
+            recognition.start();
+          } catch (e) {
+            console.warn("Restart error:", e);
+          }
+        }, 300);
+      }
+    };
+
+    recognition.onerror = (event) => {
+      console.error("Speech error:", event.error);
+      statusText.textContent = "Error: " + event.error;
+      statusText.classList.add("status-error");
+      if (event.error === "not-allowed" || event.error === "service-not-allowed") {
+        statusText.textContent =
+          "Mic permission allow karo (browser ke address bar se).";
+      } else if (event.error === "network") {
+        statusText.textContent =
+          "Network error: internet / VPN / adblock check karo.";
+      }
+    };
+
+    recognition.onresult = (event) => {
+      let fullText = "";
+      for (let i = event.resultIndex; i < event.results.length; i++) {
+        const res = event.results[i];
+        if (res.isFinal) {
+          fullText += res[0].transcript + " ";
+        }
+      }
+      fullText = fullText.trim();
+      if (!fullText) return;
+
+      showTranscript(fullText);
+
+      let added = 0;
+      const lower = fullText.toLowerCase();
+      for (const w of targetWords) {
+        added += countOccurrences(lower, w);
+      }
+
+      if (added > 0) {
+        totalCount += added;
+        countDisplay.textContent = totalCount.toString();
+        statusText.textContent =
+          `+${added} jap detect hua. Total: ${totalCount}`;
       } else {
-        mantraPreview.textContent = 'Counting: "' + targetWords.join('", "') + '"';
+        statusText.textContent = "Jap nahi mila, fir se bolo…";
       }
-      saveState();
-    }
+    };
+  }
 
-    function setListeningState(isOn) {
-      listening = isOn;
-      if (isOn) {
-        startBtn.classList.add("disabled");
-        startBtn.disabled = true;
-        stopBtn.classList.remove("disabled");
-        stopBtn.disabled = false;
-        statusText.textContent = "Sunn raha hoon… jap bolo.";
-      } else {
-        startBtn.classList.remove("disabled");
-        startBtn.disabled = false;
-        stopBtn.classList.add("disabled");
-        stopBtn.disabled = true;
-        if (!statusText.classList.contains("status-error")) {
-          statusText.textContent = "Stopped.";
-        }
-      }
-    }
+  // --- Event listeners ---
+  mantraInput.addEventListener("input", updateTargetWords);
 
-    function showTranscript(text) {
-      transcriptBox.innerHTML = "";
-      const span = document.createElement("span");
-      span.textContent = text;
-      transcriptBox.appendChild(span);
-    }
-
-    function resetTranscriptPlaceholder() {
-      transcriptBox.innerHTML = "";
-      const span = document.createElement("span");
-      span.className = "transcript-placeholder";
-      span.textContent = "Yaha last suna hua sentence dikhega…";
-      transcriptBox.appendChild(span);
-    }
-
-    function countOccurrences(text, word) {
-      const tokens = text
-        .toLowerCase()
-        .split(/[\s,.;:!?()"'`]+/)
-        .filter(Boolean);
-      let c = 0;
-      for (const t of tokens) {
-        if (t === word) c++;
-      }
-      return c;
-    }
-
-    function applyTheme(dark) {
-      isDark = dark;
-      if (dark) {
-        document.body.classList.add("dark");
-        themeToggle.textContent = "☀️ Light";
-      } else {
-        document.body.classList.remove("dark");
-        themeToggle.textContent = "🌙 Dark";
-      }
-      saveState();
-    }
-
-    function loadState() {
-      try {
-        const raw = localStorage.getItem(STORAGE_KEY);
-        if (!raw) return;
-        const s = JSON.parse(raw);
-        if (s && typeof s === "object") {
-          if (typeof s.mantra === "string") {
-            mantraInput.value = s.mantra;
-          }
-          if (typeof s.lang === "string") {
-            langSelect.value = s.lang;
-          }
-          if (typeof s.count === "number" && s.count > 0) {
-            totalCount = s.count;
-            countDisplay.textContent = totalCount.toString();
-          }
-          applyTheme(!!s.dark);
-        }
-      } catch (e) {
-        console.warn("State load error:", e);
-      }
-    }
-
-    function setupRecognition() {
-      if (!SpeechRecognition) {
-        supportText.textContent = "⚠ Browser speech support nahi deta";
-        supportPill.style.background = "#fee2e2";
-        statusText.textContent = "SpeechRecognition support ke liye Chrome / Edge use karo.";
-        startBtn.disabled = true;
-        startBtn.classList.add("disabled");
-        return;
-      }
-
-      recognition = new SpeechRecognition();
-      recognition.continuous = true;
-      recognition.interimResults = false;
-      recognition.lang = langSelect.value;
-
-      recognition.onstart = () => {
-        setListeningState(true);
-      };
-
-      recognition.onend = () => {
-        setListeningState(false);
-      };
-
-      recognition.onerror = (event) => {
-        console.error("Speech error:", event.error);
-        statusText.textContent = "Error: " + event.error;
-        statusText.classList.add("status-error");
-        if (event.error === "not-allowed" || event.error === "service-not-allowed") {
-          statusText.textContent =
-            "Mic permission allow karo (browser ke address bar se).";
-        }
-      };
-
-      recognition.onresult = (event) => {
-        let fullText = "";
-        for (let i = event.resultIndex; i < event.results.length; i++) {
-          const res = event.results[i];
-          if (res.isFinal) {
-            fullText += res[0].transcript + " ";
-          }
-        }
-        fullText = fullText.trim();
-        if (!fullText) return;
-
-        showTranscript(fullText);
-
-        let added = 0;
-        const lower = fullText.toLowerCase();
-        for (const w of targetWords) {
-          added += countOccurrences(lower, w);
-        }
-
-        if (added > 0) {
-          totalCount += added;
-          countDisplay.textContent = totalCount.toString();
-          statusText.classList.remove("status-error");
-          statusText.textContent = `+${added} jap detect hua. Total: ${totalCount}`;
-          saveState();
-        } else {
-          statusText.classList.remove("status-error");
-          statusText.textContent = "Jap nahi mila, fir se bolo…";
-        }
-      };
-    }
-
-    // --- Event listeners ---
-    mantraInput.addEventListener("input", updateTargetWords);
-
-    langSelect.addEventListener("change", () => {
-      if (recognition) {
-        const wasListening = listening;
-        if (wasListening) recognition.stop();
-        recognition.lang = langSelect.value;
-        if (wasListening) recognition.start();
-      }
-      saveState();
-    });
-
-    startBtn.addEventListener("click", () => {
-      if (!recognition) {
-        setupRecognition();
-      }
-      if (!recognition) return;
-      updateTargetWords();
-      if (targetWords.length === 0) {
-        statusText.textContent = "Pehle mantra likho.";
-        statusText.classList.add("status-error");
-        return;
-      }
-      statusText.classList.remove("status-error");
-      try {
-        recognition.start();
-      } catch (e) {
-        console.warn(e);
-      }
-    });
-
-    stopBtn.addEventListener("click", () => {
-      if (recognition && listening) {
+  langSelect.addEventListener("change", () => {
+    if (recognition) {
+      const wasListening = listening;
+      if (wasListening) {
+        userStopped = true;      // language change pe abhi ke liye roko
         recognition.stop();
       }
-    });
+      recognition.lang = langSelect.value;
+      if (wasListening) {
+        userStopped = false;     // phir se auto-restart allow
+        try {
+          recognition.start();
+        } catch (e) {
+          console.warn(e);
+        }
+      }
+    }
+  });
 
-    resetBtn.addEventListener("click", () => {
-      totalCount = 0;
-      countDisplay.textContent = "0";
-      resetTranscriptPlaceholder();
-      statusText.classList.remove("status-error");
-      statusText.textContent = "Reset kar diya. Naya jap shuru kar sakte ho.";
-      saveState();
-    });
+  startBtn.addEventListener("click", () => {
+    if (!recognition) {
+      setupRecognition();
+    }
+    if (!recognition) return;
 
-    themeToggle.addEventListener("click", () => {
-      applyTheme(!isDark);
-    });
-
-    // Initial state
-    loadState();
     updateTargetWords();
+    if (targetWords.length === 0) {
+      statusText.textContent = "Pehle mantra likho.";
+      statusText.classList.add("status-error");
+      return;
+    }
+    statusText.classList.remove("status-error");
+
+    userStopped = false;   // 🔸 start ke time bol rahe ki ab auto-restart allowed hai
+    try {
+      recognition.start();
+    } catch (e) {
+      console.warn(e);
+    }
+  });
+
+  stopBtn.addEventListener("click", () => {
+    if (recognition && listening) {
+      userStopped = true;  // 🔸 user ne stop kar diya, ab auto-restart mat karo
+      recognition.stop();
+    }
+  });
+
+  resetBtn.addEventListener("click", () => {
+    totalCount = 0;
+    countDisplay.textContent = "0";
     resetTranscriptPlaceholder();
-    setupRecognition();
-  </script>
+    statusText.classList.remove("status-error");
+    statusText.textContent = "Reset kar diya. Naya jap shuru kar sakte ho.";
+  });
+
+  // Initial state
+  updateTargetWords();
+  resetTranscriptPlaceholder();
+  setupRecognition();
+</script>
+
 </body>
 </html>
